<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ivBookDetail"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/book_icon_content_description" />

    <TextView
        android:id="@+id/tvBookId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_book_id_placeholder"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivBookDetail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_last_value_label"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBookDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvBookId" />

    <TextView
        android:id="@+id/tvLastValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvLastValueLabel"
        app:layout_constraintTop_toTopOf="@+id/tvLastValueLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvLastValueLabel"/>

    <TextView
        android:id="@+id/tvHighValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_high_value_label"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBookDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvLastValueLabel" />

    <TextView
        android:id="@+id/tvHighValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvHighValueLabel"
        app:layout_constraintTop_toTopOf="@+id/tvHighValueLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvHighValueLabel"/>

    <TextView
        android:id="@+id/tvLowValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_low_value_label"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBookDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvHighValueLabel" />

    <TextView
        android:id="@+id/tvLowValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvLowValueLabel"
        app:layout_constraintTop_toTopOf="@+id/tvLowValueLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvLowValueLabel"/>

    <TextView
        android:id="@+id/tvAsks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_asks_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLowValueLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAsks"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#918E8E"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAsks"
        tools:listitem="@layout/item_ask" />

    <TextView
        android:id="@+id/tvBids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_bids_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvAsks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBids"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#918E8E"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBids"
        tools:listitem="@layout/item_bid" />

</androidx.constraintlayout.widget.ConstraintLayout>